unpackaged/objects/Ichiroheian__c.object
<CustomObject>
    <fields>
        <fullName>VI_CompanyName__c</fullName>
        <label>（任意）保険会社名</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>平安財産保険</fullName>
                </value>
                <value>
                    <fullName>太平洋財産保険</fullName>
                </value>
                <value>
                    <fullName>PICC</fullName>
                </value>
                <value>
                    <fullName>華泰財産保険会社</fullName>
                </value>
                <value>
                    <fullName>東京海上日動（中国）</fullName>
                </value>
                <value>
                    <fullName>三井住友海上（中国）</fullName>
                </value>
                <value>
                    <fullName>日本財産保険（中国）</fullName>
                </value>
                <value>
                    <fullName>富邦財険</fullName>
                </value>
                <value>
                    <fullName>中華聨合財産</fullName>
                </value>
                <value>
                    <fullName>UIC</fullName>
                </value>
                <value>
                    <fullName>BAO VIET TOKYO MARINE</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Malaysia)</fullName>
                </value>
                <value>
                    <fullName>MALAYAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VI_DriverDamages__c</fullName>
        <label>（任意）車上人員責任（運転手）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_InsuranceAmount__c</fullName>
        <label>（任意）保険料</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_InsuranceCancel__c</fullName>
        <label>（任意）保険解約日（24時迄）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VI_InsuranceShiki__c</fullName>
        <label>（任意）保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VI_InsuranceShuki__c</fullName>
        <label>（任意）保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VI_KeiyakuStatus__c</fullName>
        <formula>if( and(isnull( VI_InsuranceCancel__c )=true,isnull( VI_InsuranceShuki__c )=false),&quot;契約中&quot;,
  if( and(isnull(VI_InsuranceCancel__c )=false,isnull( VI_InsuranceShuki__c )=false),&quot;退会&quot;,&quot;契約なし&quot;))</formula>
        <label>（任意）契約状態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VI_KinkyuTel__c</fullName>
        <label>（任意）緊急連絡電話番号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VI_CompanyName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>95511</fullName>
                </value>
                <value>
                    <fullName>95500</fullName>
                </value>
                <value>
                    <fullName>95518</fullName>
                </value>
                <value>
                    <fullName>4006095509</fullName>
                </value>
                <value>
                    <fullName>4008858008</fullName>
                </value>
                <value>
                    <fullName>4008832836</fullName>
                </value>
                <value>
                    <fullName>4008817518</fullName>
                </value>
                <value>
                    <fullName>4009209551</fullName>
                </value>
                <value>
                    <fullName>95585</fullName>
                </value>
                <value>
                    <fullName>026878525</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VI_Other__c</fullName>
        <label>（任意）その他の保険項目</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VI_PaneDamage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>（任意）ガラス単独破壊</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VI_PassengerDamages__c</fullName>
        <label>（任意）車上人員責任（搭乗者）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_PassengerUnexpectedPersonal__c</fullName>
        <label>（任意）搭乗者意外人身保険</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_ScratchDamage__c</fullName>
        <label>（任意）鈎損</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_ShokenNo__c</fullName>
        <label>（任意）証券番号</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VI_ThirdPartyDamages__c</fullName>
        <label>（任意）第三者賠償</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_VehicleLoss__c</fullName>
        <label>（任意）車両損失</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_VehicleTheft__c</fullName>
        <label>（任意）車両盗難</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WOAgency__c</fullName>
        <label>（搭乗）契約店</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>代理店</fullName>
                </value>
                <value>
                    <fullName>ブローカー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOCancelDateAlpha__c</fullName>
        <label>（OP）解約日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOCancelReasonAlpha__c</fullName>
        <label>（OP）保険解約理由</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WOChangeShikiAlpha__c</fullName>
        <label>（OP）異動始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOCommodityNameAlpha__c</fullName>
        <label>（OP）商品名称</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WOCommodityName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安全万里α</fullName>
                </value>
                <value>
                    <fullName>暢行無憂α</fullName>
                </value>
                <value>
                    <fullName>車内人員財産保険</fullName>
                </value>
                <value>
                    <fullName>臨時＆高額病室</fullName>
                </value>
                <value>
                    <fullName>オプション特約</fullName>
                </value>
                <value>
                    <fullName>対人・対物</fullName>
                </value>
                <value>
                    <fullName>治療費／交通・宿泊費／レンタカー費</fullName>
                </value>
                <value>
                    <fullName>交通・宿泊費／レンタカー費</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOCommodityName__c</fullName>
        <label>（搭乗）商品名称</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WOInsuranceCompany__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安全万里</fullName>
                </value>
                <value>
                    <fullName>安全万里Ｚ</fullName>
                </value>
                <value>
                    <fullName>安全万里V</fullName>
                </value>
                <value>
                    <fullName>一路平安</fullName>
                </value>
                <value>
                    <fullName>Safety Line</fullName>
                </value>
                <value>
                    <fullName>暢行中華</fullName>
                </value>
                <value>
                    <fullName>暢行無憂</fullName>
                </value>
                <value>
                    <fullName>搭乗者団体意外傷害</fullName>
                </value>
                <value>
                    <fullName>搭乗者傷害保険</fullName>
                </value>
                <value>
                    <fullName>Well Drive(IDN)</fullName>
                </value>
                <value>
                    <fullName>Well Drive(THA)</fullName>
                </value>
                <value>
                    <fullName>Well Drive(MYS)</fullName>
                </value>
                <value>
                    <fullName>Well Drive(PHL)</fullName>
                </value>
                <value>
                    <fullName>Well Drive(VNM)</fullName>
                </value>
                <value>
                    <fullName>Well Drive(MYS)-1</fullName>
                </value>
                <value>
                    <fullName>Well Drive(MYS)-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOInsuranceCompany__c</fullName>
        <label>（搭乗）保険会社名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KeiyakuArea__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>太平洋</fullName>
                </value>
                <value>
                    <fullName>平安</fullName>
                </value>
                <value>
                    <fullName>UIC</fullName>
                </value>
                <value>
                    <fullName>華泰</fullName>
                </value>
                <value>
                    <fullName>東京海上</fullName>
                </value>
                <value>
                    <fullName>三井住友海上（中国）</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Indonesia)</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Malaysia)</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Thailand)</fullName>
                </value>
                <value>
                    <fullName>Tokio Marine(Vietnam)</fullName>
                </value>
                <value>
                    <fullName>MALAYAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOInsurancePlanAlpha__c</fullName>
        <label>（OP）保険プラン</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WOCommodityNameAlpha__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LA1</fullName>
                </value>
                <value>
                    <fullName>LB1</fullName>
                </value>
                <value>
                    <fullName>LC1</fullName>
                </value>
                <value>
                    <fullName>LA2</fullName>
                </value>
                <value>
                    <fullName>LB2</fullName>
                </value>
                <value>
                    <fullName>LC2</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
                <value>
                    <fullName>①</fullName>
                </value>
                <value>
                    <fullName>②</fullName>
                </value>
                <value>
                    <fullName>③</fullName>
                </value>
                <value>
                    <fullName>治療費1000</fullName>
                </value>
                <value>
                    <fullName>治療費2000</fullName>
                </value>
                <value>
                    <fullName>治療費3000</fullName>
                </value>
                <value>
                    <fullName>治療費5000</fullName>
                </value>
                <value>
                    <fullName>治療費1000+交通費</fullName>
                </value>
                <value>
                    <fullName>治療費2000+交通費</fullName>
                </value>
                <value>
                    <fullName>治療費3000+交通費</fullName>
                </value>
                <value>
                    <fullName>治療費5000+交通費</fullName>
                </value>
                <value>
                    <fullName>治療費1000+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費2000+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費3000+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費5000+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費1000+交通費+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費2000+交通費+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費3000+交通費+レンタカー費</fullName>
                </value>
                <value>
                    <fullName>治療費5000+交通費+レンタカー費</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WOInsuranceShikiAlpha__c</fullName>
        <label>（OP）初年度始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOInsuranceShukiAlpha__c</fullName>
        <label>（OP）現保険終期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WOPresentInsuranceShikiAlpha__c</fullName>
        <label>（OP）現保険始期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WithoutReplacementCar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>交替車なし</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sid</label>
        <type>Text</type>
    </fields>
    <label>自動車保険関連</label>
    <listViews>
        <fullName>X00_Batch_Process</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/1/2000 12:00 AM</value>
        </filters>
        <label>00. 一括処理 / Batch Process</label>
        <language>ja</language>
        <sharedTo>
            <role>DeveloperName70583713081</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x01</fullName>
        <columns>IchiroHeianNo__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべての一路平安</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>IchiroHeianNo__c</columns>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CancelDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>02. 契約中の一路平安</label>
    </listViews>
    <listViews>
        <fullName>x10</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>北京</value>
        </filters>
        <label>10. 契約中の一路平安(北京)</label>
    </listViews>
    <listViews>
        <fullName>x11</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>天津</value>
        </filters>
        <label>11. 契約中の一路平安(天津)</label>
    </listViews>
    <listViews>
        <fullName>x12</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>大連</value>
        </filters>
        <label>12. 契約中の一路平安(大連)</label>
    </listViews>
    <listViews>
        <fullName>x13</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>青島</value>
        </filters>
        <label>13. 契約中の一路平安(青島)</label>
    </listViews>
    <listViews>
        <fullName>x20</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>上海</value>
        </filters>
        <label>20. 契約中の一路平安(上海)</label>
    </listViews>
    <listViews>
        <fullName>x21</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>成都</value>
        </filters>
        <label>21. 契約中の一路平安(成都)</label>
    </listViews>
    <listViews>
        <fullName>x22</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>武漢</value>
        </filters>
        <label>22. 契約中の一路平安(武漢)</label>
    </listViews>
    <listViews>
        <fullName>x23</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>杭州</value>
        </filters>
        <label>23. 契約中の一路平安(杭州)</label>
    </listViews>
    <listViews>
        <fullName>x24</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>寧波</value>
        </filters>
        <label>24. 契約中の一路平安(寧波)</label>
    </listViews>
    <listViews>
        <fullName>x30</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>蘇州</value>
        </filters>
        <label>30. 契約中の一路平安(蘇州)</label>
    </listViews>
    <listViews>
        <fullName>x31</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>無錫</value>
        </filters>
        <label>31. 契約中の一路平安(無錫)</label>
    </listViews>
    <listViews>
        <fullName>x32</fullName>
        <columns>NAME</columns>
        <columns>KeiyakuCompanyName__c</columns>
        <columns>ShiyoCompanyName__c</columns>
        <columns>IchiroHeianNo__c</columns>
        <columns>ShokenNo__c</columns>
        <columns>InsurancePlan__c</columns>
        <columns>InsuranceShuki__c</columns>
        <columns>CancelDate__c</columns>
        <columns>KeiyakuArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CancelDate__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_YEARS:5</value>
        </filters>
        <filters>
            <field>KeiyakuArea__c</field>
            <operation>equals</operation>
            <value>昆山</value>
        </filters>
        <label>32. 契約中の一路平安(昆山)</label>
    </listViews>
    <nameField>
        <label>登録番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CarKeiyakuArea_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( isnull(OI_InsuranceShuki__c) = False,
isnull( VI_InsuranceShuki__c ) = False),
ISPICKVAL(OI_KeiyakuArea__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>(自動車)契約地区を選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WBOriginalCheck</fullName>
        <active>true</active>
        <errorConditionFormula>AND( isnull(InsuranceShuki__c) = False, 
OR(isnull( Seat__c ) = True, 
ISPICKVAL(OwnerKubun__c, &quot;&quot;) ))</errorConditionFormula>
        <errorMessage>座席数または所有区分が入力されていません。</errorMessage>
    </validationRules>
</CustomObject>